# hdetect

./: .cproject  .gitignore  .project  .pydevproject  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.2.5pre1  Makefile  README.md  cmake_install.cmake  deploy.sh  hdetect.doxyfile  mainpage.dox  manifest.xml  nopac.xml  package.xml  param.txt  proc.launch  test.launch  upm.doxyfile
calibration parameters/: calib_ROS_red.txt  hokuyo_parameters.txt
data/: annotation.csv  annotation2.csv  trained_boost.xml  trained_boost_new.xml
html/: FramePublisher_8cpp.html  FramePublisher_8cpp_source.html  annotateData_8cpp.html  annotateData_8cpp_source.html  annotated.html  classAnnotateData-members.html  classAnnotateData.html  classdetectTest-members.html  classdetectTest.html  classes.html  classvisualizeRT-members.html  classvisualizeRT.html  detectTest_8cpp.html  detectTest_8cpp_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_func.html  index.html  trainLaser_8cpp.html  trainLaser_8cpp_source.html  visualizeRT_8cpp.html  visualizeRT_8cpp_source.html
html/search/: all_61.html  all_63.html  all_64.html  all_6d.html  all_6e.html  all_73.html  all_74.html  all_76.html  classes_61.html  classes_64.html  classes_76.html  files_61.html  files_64.html  files_66.html  files_74.html  files_76.html  functions_61.html  functions_64.html  functions_6d.html  functions_76.html  functions_7e.html  search.js  typedefs_6d.html  variables_62.html  variables_64.html  variables_6c.html  variables_6d.html  variables_74.html
include/hdetect/: human_follower.hpp  recognizeRT.hpp
include/hdetect/lib/: annotator.hpp  bagReader.hpp  bagSubscriber.hpp  detector.hpp  human.hpp  humanFollower.hpp  laserLib.hpp  lengine.hpp  lfeatures.hpp  lgeometry.hpp  object_tracking.hpp  observation.hpp  projectTools.hpp  recognizeRT.hpp  recognizer.hpp  visualizer.hpp
include/upm/lib/: annotator.hpp  bagReader.hpp  detector.hpp  laserLib.hpp  lengine.hpp  lfeatures.hpp  lgeometry.hpp  projectTools.hpp  visualizer.hpp
latex/: doxygen.sty  index.tex  refman.tex
launches/: _recordUTMFF.launch  annotateBAG.launch  calibrate_cam.launch  ff_only.launch  headlessBAG.launch  headlessRT.launch  recognizeBAG.launch  recognizeRT.launch  recordBAG.launch  recordINIT.launch  recordURGGS.launch  recordUTMFF.launch  rvizRT.launch  showBAG.launch  showRT.launch  trainLaser.launch  utm_only.launch  viewRect.launch  visualizeBAG.launch  visualizeRT.launch
msg/: ClusterClass.msg  ClusteredScan.msg  HumansFeat.msg  HumansFeatClass.msg
parameters/: camera_parameters_logitech.txt  laser_filter.yaml  shadow_filter.yaml
parameters & calibration/: RADLOC  calib_ROS_yellow.txt  camera_parameters_creative.txt  laser_filter.yaml
parameters & calibration/html/: index.html
parameters & calibration/latex/: doxygen.sty  refman.tex
rviz/: hdetect2.rviz  upm.vcg  urg_firefly.vcg
src/: FramePublisher.cpp  HumanFollowerRT.cpp  annotateData.cpp  detectTest.cpp  headlessRT.cpp  recognizeRT.cpp  showRT.cpp  trainLaser.cpp  visualizeRT.cpp
src/hdetect/msg/: _ClusteredScan.py  __init__.py
src/lib/: .detector.cpp.swp  Header.cpp  Header.hpp  HumanFollower.cpp  Observation.hpp  Recognizer.cpp  Recognizer_20140217.cpp  annotator.cpp  bagReader.cpp  detector.cpp  header.cpp  human.cpp  laserLib.cpp  lengine.cpp  lfeatures.cpp  lgeometry.cpp  object_tracking.cpp  observation.cpp  projectTools.cpp  recognizer.cpp  visualizer.cpp
src/other/: Calib_Matlab2ROS.cpp  caltest.cpp
src/upm/msg/: _ClusteredScan.py
yaml/: camera_calib.yaml  camera_calib_log.yaml  camera_calib_yellow.yaml  detector.yaml  laser_filter.yaml  logitech_cam_hd.yml  shadow_filter.yaml
